<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jumble</string>
    <string name="loading">Loading...</string>
    <string name="text_button_play">Play</string>
    <string name="options">Options</string>
    <string name="action_settings">Settings</string>
    <string name="win">Congratulations !</string>
    <string name="win2">Good !</string>
    <string name="win3">Not bad !</string>
    <string name="start_play">Start !</string>
    <string name="choose_avatar">Choose your avatar</string>
    <string name="name_avatar">Name</string>
    <string name="score_total">Total score : </string>
    <string name="best_score">Best score : </string>
    <string name="language">Language </string>
    <string name="music">Music</string>
    <string name="needHint">Need a hint ?</string>
    <string name="detailsHint">Press the button with the speaker to hear the word\'s pronounciation.
    Be careful ! You will loose 10 points each time that you will press it...</string>
    <string name="reset">Clear data</string>
    <string name="data">Registered data</string>
    <string name="rules">Rules</string>
    <string name="scoreBeg">Score at the beginning : 100 points</string>
    <string name="score_adv">If you resolved the word in less than 15 seconds and that you did the same numbers of moves
            than the numbers of letters, you won 100 points !</string>
    <string name="score_med">If you resolved the word in less than 30 seconds, you won 50 points !</string>
    <string name="score_low">If you resolved the word in more than 30 seconds, you won 20 points !</string>
    <string name="scoreHint">Be careful ! Each time that you use the hint, you loose 10 points.</string>
    <string name="results">Results</string>
    <string name="text_reset_score">Reset the score</string>
    <string name="unlockLevel">You unlock a new level !</string>
    <string name="detailsLevels">Well done ! A new category is now available !</string>
    <string name="score_animals">The category Animals is unlocked at the beginning of the game</string>
    <string name="score_fruits_vegetables">You need to have 500 points to unlock the category: Fruits and Vegetables</string>
    <string name="score_home">You need to have 2000 points to unlock the category: Home</string>
    <string name="score_nature">You need to have 4000 points to unlock the category: Nature</string>
    <string name="score_colors">You need to have 6000 points to unlock the category: Colors</string>
    <string name="score_clothes">You need to have 8000 points to unlock the category: Clothes</string>
    <string name="score_health">You need to have 12000 points to unlock the category: Health</string>
    <string name="score_sports">You need to have 16000 points to unlock the category: Sports</string>
    <string name="unlockNewLevel">To unlock a new level, you have to solve more than 20% of the words of the previous category.</string>
    <string name="sameWords">The word disappeared of the words to find when you\'ve reached more than 2000 points for this word.</string>

</resources>