<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_category"
    android:gravity="center"
    android:orientation="vertical" >
    <FrameLayout
        android:id="@+id/top"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="fill_vertical|fill_horizontal"
        android:layout_weight="2"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/rulesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="40dp"
            android:text="@string/rules"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/returnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:onClick="getBack"
            android:src="@drawable/button_back" />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/bottom"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="fill_vertical|fill_horizontal"
        android:layout_weight="0.8"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/scoreBeginning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/scoreBeg"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/score1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/score_adv"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/score2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/score_med"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/score3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="170dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/score_low"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/score4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="220dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/scoreHint"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="italic" />
    </FrameLayout>
</LinearLayout>